--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "vite": "^5.1.0",
     "vite-tsconfig-paths": "^4.2.1"
   },
+  "prisma": {
+    "seed": "pnpx tsx prisma/seed.ts"
+  },
   "engines": {
     "node": ">=18.0.0"
   }
