Add `db` module

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "**/*.ts",
     "**/*.tsx",
     "**/.server/**/*.ts",
+    "**/only.server/**/*.ts",
     "**/.server/**/*.tsx",
     "**/.client/**/*.ts",
     "**/.client/**/*.tsx"
